--- a/src/pages/pages-scss/profile.scss
+++ b/src/pages/pages-scss/profile.scss
@@ -20,18 +20,18 @@
         height: 15vh;
         width: 15vh;
         border-radius: 100px;
-        position: relative;
-        overflow: hidden;
-        img{
-          position: absolute;
-          display: block;
-          width: 15vh;
-          height: 15vh;
-          min-width: 100%;
-          min-height: 100%;
-          border-radius: 100px;
+        background-size: cover;
+        background-position: center;
+        // img{
+        //   position: absolute;
+        //   display: block;
+        //   width: 15vh;
+        //   height: 15vh;
+        //   min-width: 100%;
+        //   min-height: 100%;
+        //   border-radius: 100px;
           
-        }
+        // }
       }
 
       .spinner-image{
